fix headline overlapping text

--- a/skins/VoidLinux/style.css
+++ b/skins/VoidLinux/style.css
@@ -475,11 +475,6 @@ pre.linenums ol {
 @media (max-width: 979px) {
 	body { padding-top: 103px; }
 
-	.mw-headline {
-		margin-top: -103px;
-		padding-top: 103px;
-	}
-
 	.subnav #subnav-select {
 		margin-left: 20px;
 		display: inline-block;
